# regresion_telco

./: .gitignore  ExplicacionPruebas.md  README.md  pyproject.toml
notebooks/: Pruebas.ipynb
src/regresion_pia/: churn_predict_app.py  churn_predict_service.py
