[project]
name = "regresion-pia"
version = "0.1.0"
description = ""
authors = [
    {name = "envyx10",email = "pabloinfodesign95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "regresion_pia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
